# BolsaIC-Smart_Sent

./: CMakeLists.txt
exemplos/: exemplo.txt
includes/: tarefa_1.hpp  tarefa_2_3.hpp
tarefa_1/: tarefa_1.cpp  tarefa_2.cpp  worker_1.cpp  worker_2.cpp
tarefa_2/: tarefa_2 .cpp  worker_2 .cpp
tarefa_3/: Untitled-1.cpp  config.cpp  tarefa_3.cpp  worker_3.cpp
